fixed jumping cursor in FF

--- a/www/widgets/vedor/editor.v9.css
+++ b/www/widgets/vedor/editor.v9.css
@@ -149,6 +149,7 @@ a:hover span.deltag {
 		height: 100%;
 		background-color: #CCCDCE;
 		clear: both;
+		overflow: hidden;
 	}
 
 	.antline {
